<resources>
    <string name="app_name">StudentRepublic</string>
    <string name="confirm">Confirm</string>
    <string name="name">Name</string>
    <string name="i_am_cr">I am CR</string>
    <string name="i_am_a_student">I am a Student</string>
    <string name="sign_in">Sign In</string>
    <string name="create_account">Create Account</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="title_activity_login">Sign in</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="or">Or</string>
    <string name="msg_token_fmt" translatable="false">InstanceID Token: %s</string>

    <string name="default_notification_channel_id" translatable="false">
        fcm_default_channel</string>
    <!--
        This is the name that users will see when interacting with this channel.
        It should describe the category of notifications that will be sent through this channel
     -->
    <string name="default_notification_channel_name" translatable="true">Weather</string>
    <string name="msg_subscribe_failed">Failed to subscribe to weather topic</string>
    <string name="fcm_message">FCM Message</string>
    <string name="msg_subscribed">Subscribed To Weather</string>
    <string name="sender_id">153508310821</string>
    <string name="create_class">Create Class</string>
    <string name="enter_class_code">Enter Class Code</string>
    <string name="enter_class_name">Enter Class Name</string>
    <string name="class_code">Class Code</string>
    <string name="check">Check</string>
    <string name="class_name">Class Name</string>
    <string name="next">Next</string>
    <string name="notification_title">Notification Title</string>
    <string name="send">Send</string>
    <string name="back">Back</string>
    <string name="description">Description</string>
    <string name="title">Title</string>

</resources>
